--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^10.16.4",
-    "next": "14.0.4",
-    "react": "^18.2.0",
+    "framer-motion": "^11.11.17",
+    "next": "15.0.3",
+    "react": "19.0.0-rc-66855b96-20241106",
     "react-countup": "^6.5.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "tailwind-merge": "^2.5.4"
